--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <link rel="stylesheet" href="//at.alicdn.com/t/font_957855_0eh5dsmem26c.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.0.2/css/swiper.min.css">
+  <link rel="stylesheet" href="https://daneden.github.io/animate.css/animate.min.css">
   <title>mryx-vue</title>
 </head>
 
