--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
   <link rel="stylesheet" href="//at.alicdn.com/t/font_957855_0eh5dsmem26c.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.0.2/css/swiper.min.css">
   <link rel="stylesheet" href="https://daneden.github.io/animate.css/animate.min.css">
+  <script type="text/JavaScript">
+    document.documentElement.style.fontSize = document.documentElement.clientWidth / 3.75 + 'px';
+  </script>
   <title>mryx-vue</title>
 </head>
 
